; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tg3.c_tg3_phy_eee_config_ok.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/extr_tg3.c_tg3_phy_eee_config_ok.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tg3 = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i64, i64, i64 }
%struct.ethtool_eee = type { i64, i64, i64 }

@TG3_PHYFLG_EEE_CAP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.tg3*)* @tg3_phy_eee_config_ok to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @tg3_phy_eee_config_ok(%struct.tg3* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.tg3*, align 8
  %4 = alloca %struct.ethtool_eee, align 8
  store %struct.tg3* %0, %struct.tg3** %3, align 8
  %5 = load %struct.tg3*, %struct.tg3** %3, align 8
  %6 = getelementptr inbounds %struct.tg3, %struct.tg3* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 8
  %8 = load i32, i32* @TG3_PHYFLG_EEE_CAP, align 4
  %9 = and i32 %7, %8
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %12, label %11

11:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %53

12:                                               ; preds = %1
  %13 = load %struct.tg3*, %struct.tg3** %3, align 8
  %14 = call i32 @tg3_eee_pull_config(%struct.tg3* %13, %struct.ethtool_eee* %4)
  %15 = load %struct.tg3*, %struct.tg3** %3, align 8
  %16 = getelementptr inbounds %struct.tg3, %struct.tg3* %15, i32 0, i32 1
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 3
  %18 = load i64, i64* %17, align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %46

20:                                               ; preds = %12
  %21 = load %struct.tg3*, %struct.tg3** %3, align 8
  %22 = getelementptr inbounds %struct.tg3, %struct.tg3* %21, i32 0, i32 1
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i64, i64* %23, align 8
  %25 = getelementptr inbounds %struct.ethtool_eee, %struct.ethtool_eee* %4, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = icmp ne i64 %24, %26
  br i1 %27, label %44, label %28

28:                                               ; preds = %20
  %29 = load %struct.tg3*, %struct.tg3** %3, align 8
  %30 = getelementptr inbounds %struct.tg3, %struct.tg3* %29, i32 0, i32 1
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 1
  %32 = load i64, i64* %31, align 8
  %33 = getelementptr inbounds %struct.ethtool_eee, %struct.ethtool_eee* %4, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %32, %34
  br i1 %35, label %44, label %36

36:                                               ; preds = %28
  %37 = load %struct.tg3*, %struct.tg3** %3, align 8
  %38 = getelementptr inbounds %struct.tg3, %struct.tg3* %37, i32 0, i32 1
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 2
  %40 = load i64, i64* %39, align 8
  %41 = getelementptr inbounds %struct.ethtool_eee, %struct.ethtool_eee* %4, i32 0, i32 2
  %42 = load i64, i64* %41, align 8
  %43 = icmp ne i64 %40, %42
  br i1 %43, label %44, label %45

44:                                               ; preds = %36, %28, %20
  store i32 0, i32* %2, align 4
  br label %53

45:                                               ; preds = %36
  br label %52

46:                                               ; preds = %12
  %47 = getelementptr inbounds %struct.ethtool_eee, %struct.ethtool_eee* %4, i32 0, i32 0
  %48 = load i64, i64* %47, align 8
  %49 = icmp ne i64 %48, 0
  br i1 %49, label %50, label %51

50:                                               ; preds = %46
  store i32 0, i32* %2, align 4
  br label %53

51:                                               ; preds = %46
  br label %52

52:                                               ; preds = %51, %45
  store i32 1, i32* %2, align 4
  br label %53

53:                                               ; preds = %52, %50, %44, %11
  %54 = load i32, i32* %2, align 4
  ret i32 %54
}

declare dso_local i32 @tg3_eee_pull_config(%struct.tg3*, %struct.ethtool_eee*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
